<resources>
    <string name="app_name">碎片学习</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_register">创建新的账户</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎 ！"</string>
    <string name="invalid_username">用户名须是字母或数字,5 到 20 个字符</string>
    <string name="invalid_password">密码 5 到 20 个字符</string>
    <string name="login_failed">"用户名或密码错误"</string>
    <string name="edit_message">请输入消息</string>
    <string name="button_send">发送</string>
    <string name="onboarding_home">主页</string>
    <string name="onboarding_learn">学习</string>
    <string name="onboarding_learn_msg">编程基础就在你的指尖之间</string>
    <string name="onboarding_play">考试</string>
    <string name="onboarding_play_msg">挑战同行并参与互动代码竞赛</string>
    <string name="onboarding_code">编码</string>
    <string name="onboarding_code_msg">使用我们的Code Playground直接在您的手机上编写和运行代码</string>
    <string name="onboarding_discuss">讨论</string>
    <string name="onboarding_discuss_msg">在我们的Q＆A论坛中提出问题并给出答案</string>
    <string name="onboarding_profile">配置</string>
    <string name="onboarding_profile_msg">在碎片学习上构建并展示您独特的编码器配置！</string>
    <string-array name="fruits">
        <item>apple</item>
        <item>orange</item>
        <item>banana</item>
        <item>watermelon</item>
        <item>pear</item>
        <item>grape</item>
        <item>pineapple</item>
        <item>strawberry</item>
        <item>cherry</item>
        <item>mango</item>
        <item>apple</item>
        <item>orange</item>
        <item>banana</item>
        <item>watermelon</item>
        <item>pear</item>
        <item>apple</item>
        <item>orange</item>
        <item>banana</item>
        <item>watermelon</item>
        <item>pear</item>
    </string-array>
    <array name="discussion_filter_titles">
        <item>最近更新</item>
        <item>最受欢迎</item>
        <item>最多回复</item>
        <item>无回复</item>
        <item>我的讨论</item>
        <item>我的回复</item>
    </array>
    <string name="htmlWelcome">This is an <b>HTML</b> message!</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="chat_send">发送</string>
    <string name="chat_input_hint">输入聊天内容</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_broadcast_msg">自定义的广播消息</string>
    <string name="dialog_title_warm_tip">温馨提示</string>
    <string name="login_invalided">登录失效,请重新登录</string>
    <string name="dialog_confirm">确定</string>
    <string name="sign_up_email_hint">邮箱</string>
    <string name="sign_up_name_hint">名称</string>
    <string name="sign_up_password_hint">密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_tip">注册之前您同意我们的</string>
    <string name="sign_up_term_tip">使用条款</string>
    <string name="sign_up_wechat">微信授权登录</string>
    <string name="sign_up_qq">QQ授权登录</string>
    <string name="sign_up_email_error">邮箱格式不正确</string>
    <string name="hint_twice_quit">再按一次退出程序</string>
    <string name="network_error">网络繁忙,请稍后再试</string>
    <string name="app_completing">功能完善中,敬请期待......</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="reset_pwd">重置密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="cancel">取消</string>
    <string name="send_email">发送邮件</string>
    <string name="user_profile">用户档案</string>
    <string name="notifications">通知</string>
    <string name="service_error">"服务器异常,请联系管理人员"</string>
    <string name="edit_profile">编辑档案</string>
    <string name="change_pwd">修改密码</string>
    <string name="link_accounts">关联账户</string>
    <string name="block_accounts">取消关联</string>
    <string name="manage_skill">技能管理</string>
    <string name="logout">退出登录</string>
    <string name="search">搜索</string>
    <string name="view_more">查看更多</string>
    <string name="topics_type_coding">编码挑战</string>
    <string name="topics_type_web">网页开发</string>
    <string name="topics_type_lang">编程语言</string>
    <string name="topics_type_data">数据科学</string>
    <string name="topics_type_dev">开发基础</string>
    <string name="glossary">词汇表</string>
    <string name="reset_progress">重置进度</string>
    <string name="question_num">个问题</string>
    <string name="author_label">作者:</string>
    <string name="author">liangyudong</string>
    <string name="email_label">邮箱:</string>
    <string name="author_email">375709770@qq.com</string>
    <string name="version_label">版本号:</string>
    <string name="desc_label">说明:</string>
    <string name="desc">此项目为个人兴趣爱好,大部分功能尚未完成,正在逐步完善中</string>
    <string name="china">中国</string>
    <string name="usa">美国</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="change_pwd_success">修改密码成功,请重新登录</string>
    <string name="change_success">修改成功</string>
    <string name="no_data">暂无数据</string>
    <string name="exams_name">考试名称</string>
    <string name="exams_desc">考试说明</string>
    <string name="operation">操作</string>
    <string name="lose_exams_progress">您的考试进度将会丢失，确定返回?</string>
    <string name="already_first">已经是第一题</string>
    <string name="before_submit_tip">注意:蓝色代表已答,灰色代表未答,点击序号可跳到对应题目,确认无误后请点击提交答案</string>
    <string name="submit_answer">提交考试答案</string>
    <string name="return_submit_answer">返回提交页面</string>
    <string name="answer_right_tip">回答正确</string>
    <string name="answer_wrong_tip">回答错误</string>
    <string name="refresh_question">刷新试题,会丢失考试进度</string>
    <string name="exams_score_tip">本次考试得分:%s分,红色代表做错的题目,点击序号可跳到对应题目查看正确答案及解析</string>
    <string name="unknown_question_type">未知题目类型</string>
    <string name="answer_analysis">答案解析:%s</string>
    <string name="mark_all_as_read">所有通知标为已读</string>
    <string name="loading">正在加载…</string>
    <string name="bottom_of_view">我是有底线的</string>
    <string name="chinese_date_pattern">yyyy年MM月dd日 HH时mm分ss秒</string>
    <string name="wrong_mobile">手机格式不正确</string>
    <string name="remark_limit">备注不能超过50个字符</string>
    <string name="new_discuss">新讨论</string>
    <string name="question">问题</string>
    <string name="description">描述</string>
    <string name="relevant_tags">关联标签</string>
    <string name="post">发布</string>
    <string name="question_require">请填写问题</string>
    <string name="least_one_tag">至少填写一个标签</string>
    <string name="login_background_sys">登录碎片学习后台管理系统</string>
    <string name="confirm_login">确认登录</string>
    <string name="cancel_login">取消登录</string>
    <string name="scan">扫一扫</string>
    <string name="invite_friend">邀请朋友</string>
    <string name="donate">捐赠</string>
    <string name="feedback">反馈</string>
    <string name="settings">设置</string>
    <string name="about">关于碎片学习</string>
    <string name="start_web_view">启动WebView</string>
</resources>
