<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.javamaster.fragmentlearning.ui.activities.MainActivity">

    <item
            android:id="@+id/user_profile"
            android:title="@string/user_profile"
            android:icon="@drawable/tab_profile"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/notifications"
            app:actionProviderClass="org.javamaster.fragmentlearning.view.BadgeActionProvider"
            android:title="@string/notifications"
            android:icon="@drawable/tab_notifications"
            app:showAsAction="ifRoom"/>

    <group android:id="@+id/group">
        <item
                android:id="@+id/scan"
                android:title="@string/scan"/>
        <item
                android:id="@+id/invite_friends"
                android:title="@string/invite_friend"/>
        <item
                android:id="@+id/rate"
                android:title="@string/donate"/>
        <item
                android:id="@+id/feedback"
                android:title="@string/feedback"/>
        <item
                android:id="@+id/settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/about"
                android:title="@string/about"/>
    </group>
</menu>
