<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        tools:context=".ui.activities.AboutActivity">

    <TextView
            android:text="@string/author_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"/>

    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline8"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

    <TextView
            android:text="@string/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:text="@string/author_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:text="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/desc"
            android:layout_width="224dp"
            android:layout_height="46dp"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.309"/>

    <Button
            android:text="@string/dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            android:layout_marginStart="144dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>