<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ForgetPwdActivity">

    <TextView
            android:text="@string/reset_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_pwd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textColor="#000000"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:ems="10"
            android:id="@+id/input_email"
            android:hint="@string/input_email"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/reset_pwd"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            app:layout_constraintGuide_begin="168dp"
            android:orientation="horizontal"/>

    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_send"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAppPrimary"
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            app:layout_constraintVertical_bias="0.548"
            app:layout_constraintEnd_toStartOf="@+id/send_email"
            android:background="#00000000"/>

    <Button
            android:text="@string/send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/send_email"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#AAAAAA"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            android:background="#00000000"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.39"/>
</androidx.constraintlayout.widget.ConstraintLayout>