<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAppPrimary"
        tools:context=".ui.activities.QrCodeLoginConfirmActivity">

    <TextView
            android:text="@string/login_background_sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="216dp"/>

    <Button
            android:text="@string/confirm_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView24"/>

    <Button
            android:text="@string/cancel_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_login"
            android:backgroundTint="@color/colorGrey"
            app:layout_constraintTop_toBottomOf="@+id/confirm_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>