<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SignUpActivity"
        android:background="@color/colorAppPrimary">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_email"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:hint="@string/sign_up_email_hint"
            app:layout_constraintHorizontal_bias="0.493"
            android:inputType="textWebEmailAddress"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/sign_up_name"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:hint="@string/sign_up_name_hint"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/sign_up_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_name"
            android:layout_marginTop="20dp"
            android:hint="@string/sign_up_password_hint"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:text="@string/sign_up"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <TextView
                android:text="@string/sign_up_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:textColor="#CBD3D7"
                tools:layout_editor_absoluteY="445dp"
                tools:layout_editor_absoluteX="64dp"/>

        <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/sign_up_term_tip"
                android:textColor="#CBD3D7"
                android:ems="10"
                android:id="@+id/user_term"
                android:focusable="false"
                tools:layout_editor_absoluteY="432dp"
                tools:layout_editor_absoluteX="205dp"/>
    </LinearLayout>

    <include
            layout="@layout/qq_wechat_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <ProgressBar
            android:id="@+id/sign_up_loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>