<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.OnboardingActivity"
        android:background="#546E7A">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/app_name"
            android:ems="10"
            android:id="@+id/editText2"
            android:hapticFeedbackEnabled="false"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#CBD3D7"
            android:background="#00A30B0B"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="36sp"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/start_sign_up_activity"/>

    <Button
            android:text="@string/action_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/start_sign_up_activity"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/start_login_activity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:background="#8BC34A"
            android:textColor="#FFFFFF"/>

    <Button
            android:text="@string/action_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_login_activity"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>